--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,45 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: rgb(50, 89, 188);
+}    
+.container{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+.container .box{
+    flex-wrap: wrap;
+    width: 300px;
+    height: 450px;
+    margin: 50px 0;
+    background: rgb(34, 0, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.card{
+    text-align: center;
+    padding: 10px;
+}
 
+
+.container .box.shadow1:before{
+    content: '';
+    position: absolute;
+    top: 50px;
+    left:  0;
+    width: 300px;
+    height: 465px;
+    background:  rgb(135, 23, 191);
+    transform-origin: left;
+    transform: skewY(-3deg) skewX(-3deg);
+    filter: blur(5px);
+    z-index: -1;
+}
