--- a/styles.css
+++ b/styles.css
@@ -25,14 +25,17 @@ body{
     align-items: center;
 }
 .card{
-    text-align: center;
+    text-indent: 30px;
+    text-align: justify;
     padding: 10px;
     overflow:auto;
 }
 h2{
+    color: #fff ;
     font-size:2rem ;
 }
 p{
+     color: #fff ;
     font-size: 1rem;
 }
 
@@ -55,7 +58,7 @@ html:before{
     width: 50%;
     height: 100%;
     transform-origin: left;
-    background: rgba(238, 231, 231, 0.3);
+    background: rgba(255, 255, 255, 0.15);
     z-index: 2;
 }
 
