--- a/styles.css
+++ b/styles.css
@@ -25,10 +25,10 @@ body{
     align-items: center;
 }
 .card{
-    text-indent: 30px;
-    text-align: justify;
+    
+    text-align: center;
     padding: 10px;
-    overflow:auto;
+    
 }
 h2{
     color: #fff ;
