--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,42 @@
 body{
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     min-height: 100vh;
-    background: rgb(50, 89, 188);
-}    
+    background: linear-gradient(to right, green, blue);
+} 
+nav{
+   width: 100%;
+   height: 100px;
+   display: flex;
+   justify-content: space-evenly;
+   align-content: center;
+   font-size: 1.5rem;
+
+}
+nav .link{
+    z-index: 10;
+    text-decoration: none;
+    color: #000;
+    height: 50px;
+    width: 70px;
+    text-align: center;
+    align-content: center;
+    border-radius: 15px;
+    box-shadow: -15px -15px 15px rgba(255, 255, 255, 0.2), 
+                15px 15px 15px rgba(0, 0, 0, 0.2);
+
+}
+
+nav .link:hover{
+    transition: 0.3s;
+    box-shadow: -15px -15px 15px rgba(255, 255, 255, 0.2), 
+                15px 15px 15px rgba(0, 0, 0, 0.2),
+               inset -5px -5px 5px rgba(255, 255, 255, 0.2), 
+               inset  5px 5px 5px rgba(0, 0, 0, 0.2);
+}
+
 .container{
     position: relative;
     display: flex;
@@ -25,21 +57,22 @@ body{
     align-items: center;
 }
 .card{
-    
+    position: relative;
     text-align: center;
     padding: 10px;
-    
 }
 h2{
-    color: #fff ;
     font-size:2rem ;
+    color: #fff
 }
 p{
-     color: #fff ;
     font-size: 1rem;
+    color: #fff;
+    text-align: justify;
+    padding: 5px;
 }
 
-.container .box.shadow1:before{
+.box.shadow1:before{
     content: '';
     position: absolute;
     top: 50px;
@@ -49,7 +82,7 @@ p{
     background:  rgb(135, 23, 191);
     transform-origin: left;
     transform: skewY(-3deg) skewX(-3deg);
-    filter: blur(5px);
+    filter: blur(5px); 
     z-index: -1;
 }
 html:before{
@@ -57,8 +90,7 @@ html:before{
     position: absolute;
     width: 50%;
     height: 100%;
-    transform-origin: left;
-    background: rgba(255, 255, 255, 0.15);
+    background: rgba(238, 231, 231, 0.15);
     z-index: 2;
 }
 
